@@ -1,3 +1,6 @@
+10 May 2018
+update: cleanup process select all scripts that need processing instead of just 1
+
 9 May 2018
 fix: format_username in pm_system
 
